# wpm-watcher-gtk

./: Cargo.toml  flake.nix
src/: main.rs
