[package]
name = "wpm-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
words-count = "0.1.3"
colored = "2"
notify-rust = "4"
clap = { version = "3.2.17", features = ["derive"] }
relm4 = { git = "https://github.com/Relm4/Relm4", version = "0.5.0-beta.2", features = ["all"] }
relm4-components = { git = "https://github.com/Relm4/Relm4", version = "0.5.0-beta.2" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
